# SMiLE

./: .gitignore  .travis.yml  LICENSE  README.md  example.ipynb  functions.py  pyproject.toml  requeriments.txt  requirements.txt  setup.py  smile_.py
SMILE/: functions.py  smile_.py
SMILE/tests/: test_smile.py
SMiLE/local/: bin  include  lib
data/: CAL5000.gen  CAL5000.train
tests/: test_smile.py
