[tool.poetry]
name = "SMiLE"
version = "0.1.0"
description = "SMiLE algorithm for multilabel datasets with missing labels, following scikit-learn support"
authors = ["Jose Perez-Parras Toledano <joseperezparras95@gmail.com>"]

[tool.poetry.dependencies]
more-itertools = "4.3"
six = "^1.12"
pathlib2 = "^2.3"
py = "^1.10"
scikit-learn = "^0.20.2"
scipy = "^1.2"
pytest = "^4.3"
numpy = "^1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
